# temelia_technical_case

./: .gitignore  README.md  app.py  old_README.md  old_app.py  pyproject.toml  technical_report.md
src/: config.py  utils.py
src/agent/: answerer.py  memory.py  orchestrator.py  query_enhancer.py  rag_answerer.py
src/embeddings/: dense.py  sparse.py
src/ingestion/: ingest_pdf.py
src/parsing/: chunker.py  parser_VLM.py  parser_markitdown.py  parser_mistral.py  parser_pdfplumber.py
src/retrieval/: retriever.py
src/vectorStore/: old_qdrant.py  qdrant.py
