[project]
name = "temelion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "fastembed>=0.6.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.14",
    "markitdown[pdf]>=0.1.1",
    "ninja>=1.11.1.4",
    "numpy>=2.2.5",
    "openai>=1.76.2",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.6",
    "qdrant-client>=1.14.2",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "timm>=1.0.15",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
